<resources>
    <string name="app_name">Kharazmic</string>
    <string name="enter_phone_number">شماره تلفن همراه</string>
    <string name="edit_phone_number">ویرایش شماره ی تلفن</string>
    <string name="send_code">بررسی کد تایید</string>
    <string name="resend_code">ارسال مجدد کد فعال سازی</string>
    <string name="receive_code">دریافت کد تایید</string>
    <string name="rules">قوانین و مقررات</string>
    <string name="wrong_code">کد وارد شده اشتباه می باشد.</string>
    <string name="rules_txt">را خوانده ام و موافق هستم.</string>
    <string name="no_connection">لطفا از اتصال به اینترنت مطمئن شوید.</string>


    <string name="home">خانه</string>
    <string name="tutorial">آموزش</string>
    <string name="search">جست و جو</string>
    <string name="stock_search">جست و جو در سهام</string>
    <string name="news">اخبار</string>
    <string name="profile">پروفایل</string>
    <string name="search_hint">جست و جو</string>


    <string name="hagh_taghadom">حق تقدم</string>
    <string name="oragh_bedehi">اوراق بدهی</string>
    <string name="oragh_moshtaghe">اوراق مشتقه</string>
    <string name="energy">کالا و انرژی</string>
    <string name="ati">قرارداد آتی</string>
    <string name="ekhtyar">قرارداد اختیار</string>
    <string name="saham">سهام</string>
    <string name="currency">ارز</string>
    <string name="gold">طلا</string>
    <string name="sandogh">صندوق</string>
    <string name="digital_currency">ارز دیجیتال</string>


    <string name="codal">کدال</string>
    <string name="stock_market">بورس</string>
    <string name="financial">اقتصادی</string>
    <string name="conclusion">تحلیلی</string>


    <string name="fundamental">تحلیل بنیادی</string>
    <string name="technical">تحلیل تکنیکال</string>
    <string name="money_flow">جریان نقدینگی</string>
    <string name="block_chain">بلاکچین</string>
    <string name="gold_currency"> طلا و ارز</string>
    <string name="following">دنبال کنندگان</string>
    <string name="followers">دنبال شوندگان</string>
    <string name="signals">سیگنال ها</string>
    <string name="last_signals">آخرین سیگنال ها</string>
    <string name="all">همه></string>

    <string name="buy_signals">سیگنال های خریداری شده</string>
    <string name="sell_signals">سیگنال های صادر شده</string>


    <string name="version">نسخه ی نرم افزار: ۱</string>


    <string name="editProfile">ویرایش مشخصات</string>
    <string name="wallet">کیف پول</string>
    <string name="about_us">درباره ی ما</string>
    <string name="contact_us">تماس با ما</string>
    <string name="invitation">دعوت از دوستان</string>
    <string name="exit">خروج از نرم افزار</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="setting">تنظیمات</string>
    <string name="subject">موضوع درخواست:</string>
    <string name="description">شرح درخواست:</string>
    <string name="submit">ثبت درخواست</string>
    <string name="success">درخواست شما با موفقیت انجام شد.</string>
    <string name="error">در انجام درخواست شما خطایی به وجود آمد.</string>
    <string name="name_family">نام و نام خانوادگی</string>


    <string name="edit">اعمال تغییرات</string>
    <string name="experience">میزان سال تجربه</string>
    <string name="level_education">میزان تحصیلات</string>
    <string name="level_invest">پیش بینی میزان سرمایه گذاری</string>
    <string name="worth_level_1">بیشتر از ۵ میلیارد تومان</string>
    <string name="worth_level_2">بین ۱ و ۵ میلیارد تومان</string>
    <string name="worth_level_3">بین ۵۰۰ میلیون تا ۱ میلیارد تومان</string>
    <string name="worth_level_4">بین ۱۰۰ تا ۵۰۰ میلیون تومان</string>
    <string name="worth_level_5">بین ۵۰ تا ۱۰۰ میلیون تومان</string>
    <string name="worth_level_6">کم تر از ۵۰ میلیون تومان</string>
    <string name="phd">دکتری</string>
    <string name="master">کارشناسی ارشد</string>
    <string name="bachelor">کارشناسی</string>
    <string name="less_education">مقاطع پایین تر</string>


    <string name="stock_group">گروه نماد:</string>
    <string name="damage_limit">حد ضرر:</string>
    <string name="profit_limit">حد سود:</string>
    <string name="publish_date">تاریخ انتشار:</string>
    <string name="waiting_time">مدت انتظار:</string>
    <string name="analyzer">تحلیل گر:</string>
    <string name="signal_detail">جزئیات سیگنال</string>
    <string name="stock_information">اطلاعات نماد</string>
    <string name="analyzer_description">توضیحات تحلیلگر</string>
    <string name="stock_price_toman">قیمت سهم به تومان</string>


    <string name="stock">سهام</string>
    <string name="stock_filter">فیلتر سهام</string>
    <string name="calculator">ماشین حساب</string>
    <string name="watcher_message">پیام ناظر</string>
    <string name="transaction_volume">حجم معاملات:</string>
    <string name="today">امروز</string>
    <string name="yesterday">دیروز</string>
    <string name="ten_days_ago">۱۰ روزه</string>
    <string name="three_month_ago">۳ ماهه</string>
    <string name="one_month_ago">۱ ماهه</string>
    <string name="number">تعداد</string>
    <string name="volume">حجم</string>
    <string name="buy">خرید</string>
    <string name="sell">فروش</string>
    <string name="fundamental_information">اطلاعات بنیادی</string>
    <string name="technical_information">اطلاعات تکنیکال</string>
    <string name="real_personality">حقیقی</string>
    <string name="legal_personality">حقوقی</string>


    <string name="best_in_technical">بهترین های تکنیکال</string>
    <string name="best_in_fundamental">بهترین های بنیادی</string>
    <string name="see_more">مشاهده ی بیشتر</string>


    <string name="indicator">شاخص</string>
    <string name="price">قیمت</string>
    <string name="date">تاریخ</string>
    <string name="coin">سکه</string>
    <string name="global_metal">انس های جهانی</string>


    <string name="stock_calculator">ماشین حساب سهام</string>
    <string name="amount_of_stocks">تعداد سهام:</string>
    <string name="sell_price_per_stock">قیمت فروش هر سهم:</string>
    <string name="buy_price_per_stock">قیمت خرید هر سهم:</string>
    <string name="profit_or_damage">سود یا زیان</string>
    <string name="buy_price">مبلغ خرید:</string>
    <string name="sell_price">مبلغ فروش:</string>
    <string name="buy_sell_subtraction">تفاضل خرید و فروش:</string>
    <string name="efficiency_percentage">درصد سود یا زیان:</string>
    <string name="calculate_amount_of_stocks">محاسبه ی تعداد سهام:</string>
    <string name="price_per_stock">قیمت هر سهم:</string>
    <string name="number_of_stocks_to_be_purchase">تعداد سهام قابل خرید:</string>
    <string name="total_tax">جمع کارمزد:</string>
    <string name="buy_tax">کارمزد خرید:</string>
    <string name="sell_tax">کارمزد فروش:</string>


    <string name="nima">نیما</string>
    <string name="sana">سنا</string>
    <string name="exchange">نرخ آزاد</string>


    <string name="supervisor_message">پیام ناظر</string>
    <string name="news_detail">جزئیات خبر</string>
    <string name="tags">برچسب ها:</string>


    <string name="desk_cash_constant_income"> ثابت</string>
    <string name="desk_cash_blend">مختلط</string>
    <string name="desk_cash_in_stock">در سهام</string>
    <string name="desk_cash_special">خاص</string>
    <string name="desk_cash_etf">ETF</string>
    <string name="desk_cash_name">نام صندوق</string>
    <string name="average_profit">میانگین بازدهی</string>
    <string name="risk_criteria">معیار ریسک</string>
    <string name="cash_desk_name">نام صندوق:</string>
    <string name="cash_desk_manager">مدیر صندوق:</string>

</resources>
