<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_icon"
        android:title="@string/profile" />





    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search_icon"
        android:title="@string/search" />








    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_icon"
        android:title="@string/home" />





    <item
        android:id="@+id/tutorial"
        android:enabled="true"
        android:icon="@drawable/ic_tutorial_icon"
        android:title="@string/tutorial" />



    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/ic_news_icon"
        android:title="@string/news" />





</menu>