<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kharazmic.app.main.stock.stock.StockViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:overScrollMode="never"
        android:scrollbarThumbVertical="@null"
        tools:context=".main.stock.stock.StockFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/vazir_font"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/top_banner"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@mipmap/signal_detail_top_banner"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@{viewModel.fullName}"
                android:textAppearance="@style/vazir_font"
                android:textColor="@color/gray"
                android:textSize="20sp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_banner" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/transaction_volume"
                android:textAppearance="@style/vazir_font"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/full_name" />

            <LinearLayout
                android:id="@+id/volume_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/volume">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/today"
                        android:textAppearance="@style/vazir_font" />


                    <TextView
                        android:id="@+id/volume_today"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.volumeToday}"
                        android:textAppearance="@style/vazir_font"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yesterday"
                        android:textAppearance="@style/vazir_font" />


                    <TextView
                        android:id="@+id/volume_yesterday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.volumeYesterday}"
                        android:textAppearance="@style/vazir_font"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ten_days_ago"
                        android:textAppearance="@style/vazir_font" />


                    <TextView
                        android:id="@+id/volume_10days_ago"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.volume10DaysAgo}"
                        android:textAppearance="@style/vazir_font"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one_month_ago"
                        android:textAppearance="@style/vazir_font" />


                    <TextView
                        android:id="@+id/volume_1month_ago"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.volume1MonthAgo}"
                        android:textAppearance="@style/vazir_font"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three_month_ago"
                        android:textAppearance="@style/vazir_font" />

                    <TextView
                        android:id="@+id/volume_3month_ago"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.volume3MonthAgo}"
                        android:textAppearance="@style/vazir_font"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/chart_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/volume_holder">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:background="@color/dark_purple"
                    android:gravity="center"
                    android:text="@string/number"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:background="@color/dark_purple"
                    android:gravity="center"
                    android:text="@string/volume"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:background="@color/dark_purple"
                    android:gravity="center"
                    android:text="@string/buy"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:background="@color/dark_pink"
                    android:gravity="center"
                    android:text="@string/number"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:background="@color/dark_pink"
                    android:gravity="center"
                    android:text="@string/volume"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"
                    android:background="@color/dark_pink"
                    android:gravity="center"
                    android:text="@string/sell"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/white" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toBottomOf="@+id/chart_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>